# reinforcement_learning_and_game_theory

./: .gitattributes  .gitmodules  LICENSE  LecturesAndPresentations.md  MediumArticlesOnReinforcementLearning.md  README.md  RLDemoCode.md  ReinforcementLearningAndGameTheoryLinks.md  ReinforcementLearningAndGameTheoryResources.md  ReinforcementLearningLibraries.md  SequentialDecisionsAndStochasticOptimizationResources.md
docs/: Discussion_on_using_RLHF_in_LLMs_and_its_limitations.docx  DynamicProgrammingInRL.docx  Examples_using_Policy_and_Value_Functions.docx  Figures_for_David_Silver_Course_on_RL.pptx  Figures_for_the_Notes_on_Game_Theory.pptx  Figures_on_RL.pptx  GameTheoryNormalForm.docx  GameTheory_part1.docx  Note_on_One_Shot_Reinforcement_Learning.docx  Note_on_Policy_Classes_in_Reinforcement_Learning.docx  Note_on_Proximal_Policy_Optimization_Algorithms.docx  Note_on_Q_functions_in_Reinforcement_Learning.docx  NotesOnProximalPolicyOptimizationAlgorithms.docx  Notes_on_Actor-Critic_Reinforcement_Learning_Algorithms.docx  Notes_on_Batch_Reinforcement_Learning_Sasha_Lange.docx  Notes_on_Batch_Reinforcement_Learning_Sasha_Lange.pptx  Notes_on_Cooperative_N_Person_Game_Theory.docx  Notes_on_Dynamic_Programming_in_Reinforcement_Learning.docx  Notes_on_Game_Theory.docx  (+28 more)
src/experiments/keras-rl/keras-rl_demo/: pyproject.toml
src/experiments/keras-rl/keras-rl_demo/tests/: test_keras_rl_demo.py
src/experiments/openai/gym-demo/: mountain_car_random.py  pyproject.toml
src/experiments/openai/gym-demo/tests/: test_gym_demo.py
src/experiments/pygambit/pygambit_demo/: pyproject.toml
src/experiments/pygambit/pygambit_demo/tests/: test_pygambit_demo.py
src/experiments/rlib/rlib_demo/: pyproject.toml
src/experiments/rlib/rlib_demo/tests/: test_rlib_demo.py
src/experiments/tensorforce/tensorforce_demo/: pyproject.toml
src/experiments/tensorforce/tensorforce_demo/tests/: test_tensorforce_demo.py
(+14 files in other folders)
