[tool.poetry]
name = "gym_demo"
version = "0.1.0"
description = ""
authors = ["Dimitar Gueorguiev"]

[tool.poetry.dependencies]
python = "^3.8.16"
gym = {extras = ["all"], version = "^0.26.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
