[tool.poetry]
name = "rlib_demo"
version = "0.1.0"
description = ""
authors = ["Dimitar Gueorguiev"]

[tool.poetry.dependencies]
python = "^3.9"
rlib = "^0.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
