[tool.poetry]
name = "tensorforce_demo"
version = "0.1.0"
description = ""
authors = ["Dimitar Gueorguiev"]

[tool.poetry.dependencies]
python = "^3.9"
tensorforce = "^0.6.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
